--- a/egs/libri/local/pytorchnn/readme
+++ b/egs/libri/local/pytorchnn/readme
@@ -1,1 +1,7 @@
-The scripts in this dir are based on the swbd recipe of kaldi.
+This directory is adopted from `kaldi/egs/swbd/s5c/local/pytorchnn`
+
+Please refer to `CAT/egs/swbd/local/pytorchnn/readme` on how to run the Pytorch-based nnlm rescoring.
+
+Note in this recipe, we replace the Pytorch-based nnlm model with RWTH pretrained 42-layer Transformer LM, 
+while keep other steps the same with the original Pytorch-based nnlm rescoring pipeline.
+Please refer to `../../result` for a high-level information on how to run the Transformer LM rescoring.
